--- a/src/app/pages/entrada-saida/entrada-saida-entrada/entrada-saida-entrada.component.html
+++ b/src/app/pages/entrada-saida/entrada-saida-entrada/entrada-saida-entrada.component.html
@@ -29,23 +29,16 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row">
+        <div class="row">
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="inputEntrada" class="label">Entrada</label>
                     <input nbInput placeholder="Data" [nbDatepicker]="entrada" [(ngModel)]="novaEntrada.entrada">
-                    <nb-datepicker #entrada format="dd/MM/yyyy"></nb-datepicker>
+                    <nb-datepicker #entrada format="dd/MM/yyyy HH:mm:ss"></nb-datepicker>
 
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <label for="inputSaida" class="label">Saída</label>
-                    <input nbInput placeholder="" [nbDatepicker]="saida" [(ngModel)]="novaEntrada.saida">
-                    <nb-datepicker #saida format="dd/MM/yyyy"></nb-datepicker>
-                </div>
-            </div>
-        </div> -->
+        </div>
 
     </nb-card-body>
     <nb-card-footer>
