Implementação do TensorFlow

--- a/src/app/pages/inicio/camera-card/camera-card.component.scss
+++ b/src/app/pages/inicio/camera-card/camera-card.component.scss
@@ -1,10 +1,10 @@
 @import '../../../@theme/styles/themes';
-#video {
+#vid {
     background-color: #000000;
     inline-size: -webkit-fill-available;
 }
 
-#canvas {
+#canva {
     display: none;
 }
 
