--- a/src/app/pages/entrada-saida/entrada-saida-list/entrada-saida-list.component.html
+++ b/src/app/pages/entrada-saida/entrada-saida-list/entrada-saida-list.component.html
@@ -8,4 +8,5 @@
         <ng2-smart-table [settings]="settings" [source]="entradaESaidas" (edit)="editar($event)" (delete)="remove($event)" (userRowSelect)="selecionado($event)">
         </ng2-smart-table>
     </nb-card-body>
+    <button (click)="downloadPDF()">Download PDF</button>
 </nb-card>
