--- a/src/app/pages/inicio/usuarios-card/usuarios-card.component.html
+++ b/src/app/pages/inicio/usuarios-card/usuarios-card.component.html
@@ -1,7 +1,7 @@
 <nb-card accent="success">
     <nb-card-header>Usuários Registrados</nb-card-header>
     <nb-card-body>
-        <span class="titulo">150</span>
+        <span class="titulo">{{usuarioQuantidade}}</span>
         <nb-icon icon="person-done-outline" status="success"></nb-icon>
     </nb-card-body>
 </nb-card>
