--- a/src/app/pages/inicio/camera-card/camera-card.component.scss
+++ b/src/app/pages/inicio/camera-card/camera-card.component.scss
@@ -1,11 +1,12 @@
 @import '../../../@theme/styles/themes';
 #vid {
     background-color: #000000;
-    inline-size: -webkit-fill-available;
+    //inline-size: -webkit-fill-available;
 }
 
-#canva {
-    display: none;
+#canvas {
+    width: 100%;
+    max-height: 570px;
 }
 
 .icone {
