Card veículos adicionado
Card Veículos adicionado na tela inicial.

--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -5,6 +5,9 @@
             <div class="col">
                 <ngx-usuarios-card></ngx-usuarios-card>
             </div>
+            <div class="col">
+                <ngx-veiculos-card></ngx-veiculos-card>
+            </div>
         </div>
     </div>
 
