--- a/src/app/pages/entrada-saida/entrada-saida-entrada/entrada-saida-entrada.component.html
+++ b/src/app/pages/entrada-saida/entrada-saida-entrada/entrada-saida-entrada.component.html
@@ -5,7 +5,7 @@
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="inputPlaca" class="label">Placa</label>
-                    <input type="text" nbInput fullWidth id="inputPlaca" placeholder="Placa" [(ngModel)]="novaEntrada.placa">
+                    <input type="text" nbInput fullWidth id="inputPlaca" oninput="this.value = this.value.toUpperCase()" placeholder="Placa" [(ngModel)]="novaEntrada.placa">
                 </div>
             </div>
             <div class="col-sm-6">
