--- a/src/app/pages/entrada-saida/entrada-saida-entrada/entrada-saida-entrada.component.scss
+++ b/src/app/pages/entrada-saida/entrada-saida-entrada/entrada-saida-entrada.component.scss
@@ -7,3 +7,6 @@ nb-card-footer {
     padding-top: nb-theme(card-header-with-select-padding-top);
     padding-bottom: nb-theme(card-header-with-select-padding-bottom);
 }
+#inputPlaca{
+    text-transform: uppercase;
+}
