--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -12,6 +12,6 @@
     </div>
 
     <div class="col-xxl-7">
-        <ngx-camera-card></ngx-camera-card>
+        <ngx-camera-card *ngIf="showComponent"></ngx-camera-card>
     </div>
 </div>
