--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -2,7 +2,7 @@
     <div class="col-xxl-5">
         <ngx-vagas-card></ngx-vagas-card>
         <div class="row">
-            <div class="col">
+            <div id="inicio" class="col">
                 <ngx-usuarios-card></ngx-usuarios-card>
             </div>
             <div class="col">
