--- a/src/app/pages/miscellaneous/not-found/not-found.component.html
+++ b/src/app/pages/miscellaneous/not-found/not-found.component.html
@@ -3,10 +3,10 @@
     <nb-card>
       <nb-card-body>
         <div class="flex-centered col-xl-4 col-lg-6 col-md-8 col-sm-12">
-          <h2 class="title">404 Page Not Found</h2>
-          <small class="sub-title">The page you were looking for doesn't exist</small>
+          <h2 class="title">404 Página não encontrada</h2>
+          <small class="sub-title">A página que você está procurando não existe</small>
           <button nbButton fullWidth (click)="goToHome()" type="button" class="home-button">
-            Take me home
+            Ir para inicio
           </button>
         </div>
       </nb-card-body>
