Alterações finais em lotação, veiculo proibido etc

--- a/src/app/pages/inicio/showcase-dialog/showcase-dialog.component.html
+++ b/src/app/pages/inicio/showcase-dialog/showcase-dialog.component.html
@@ -9,6 +9,7 @@
     </nb-card-body>
     <nb-card-footer>
         <button nbButton hero status="primary" (click)="cadastrar()">Cadastrar veículo</button>
+        <button nbButton hero status="primary" (click)="cadastrarVeiculoUsuario()">Cadastrar veículo e usuário</button>
         <button nbButton hero status="danger" (click)="dismiss()">Cancelar</button>
     </nb-card-footer>
 </nb-card>
