--- a/src/app/pages/veiculo/veiculo-insert/veiculo-insert.component.html
+++ b/src/app/pages/veiculo/veiculo-insert/veiculo-insert.component.html
@@ -46,6 +46,7 @@
     </nb-card-body>
     <nb-card-footer>
         <button (click)="cancelar()" nbButton outline status="danger">Cancelar</button>
+        <button (click)="proibido()" nbButton outline status="danger">Veiculo Proibido</button>
         <button (click)="insert()" type="submit" nbButton outline status="primary">Cadastrar</button>
     </nb-card-footer>
 </nb-card>
